Made database with items and person

--- a/ToDoList/appsettings.json
+++ b/ToDoList/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ToDoDBContext": "server=YOGA7I:database=ToDoapi;trusted_connection=true"
+    "ToDoDBContext": "server=YOGA7I;database=ToDoapi;trusted_connection=true"
   }
 }
